force-app/main/default/objects/Contact/fields/Driver_License_Policy_Purchase_Template__c.field-meta.xml
<CustomField>
    <fullName>Driver_License_Policy_Purchase_Template__c</fullName>
    <label>Driver License Policy Purchase Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>