force-app/main/default/objects/Contact/fields/Policy_Purchase_Template__c.field-meta.xml
<CustomField>
    <fullName>Policy_Purchase_Template__c</fullName>
    <label>Policy Purchase Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>