force-app/main/default/objects/Contact/fields/Watercraft_Policy_Purchase_Template__c.field-meta.xml
<CustomField>
    <fullName>Watercraft_Policy_Purchase_Template__c</fullName>
    <label>Watercraft Policy Purchase Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>